[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "philiprehberger-datetime-kit"
version = "0.1.1"
description = "Common datetime operations missing from the standard library."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Philip Rehberger" }]
keywords = ["datetime", "date", "business-days", "calendar", "time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/philiprehberger/py-datetime-kit#readme"
Repository = "https://github.com/philiprehberger/py-datetime-kit"
Issues = "https://github.com/philiprehberger/py-datetime-kit/issues"
Changelog = "https://github.com/philiprehberger/py-datetime-kit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/philiprehberger_datetime_kit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
